# risk-model-pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL_GUIDE.md  MANIFEST.in  PIPELINE_DESIGN.md  PUBLISH_TO_PYPI.md  README.md  REFACTOR_PLAN.md  SETUP.md  all_errors.txt  check_environment.py  check_excel_report.py  compare_pipelines.py  create_quality_test_data.py  debug_gam.py  diagnose_iv_issue.py  docker-compose.yml  example_usage.py  final_errors.txt  fix_all_flake8.py  fix_all_remaining.py  fix_final_errors.py  fix_matplotlib.py  fix_no_features_config.py  fix_remaining_errors.py  flake8_errors.txt  manual_fixes.py  monitor_report.json  notebook_analysis.md  pyproject.toml  pytest.ini  quick_test.py  recommended_config.py  remove_all_unused.py  requirements-advanced.txt  requirements-core.txt  requirements-dev.txt  requirements-exact.txt  (+13 more)
.github/workflows/: ci.yml  publish.yml
artifacts/: metrics.json
backup/: pipeline_old.py
checkpoints/: error_log.json
data/: input.csv
docs/: all_info_pipeline.txt
docs/errors/: requirements-dev.txt
docs/wiki/: Best-Practices.md  Data-Splitting-Strategy.md  Feature-Selection-Parameters.md  Home.md  Imputation-Strategies.md  Information-Value.md  Model-Selection-Criteria.md  PSI-Monitoring.md  Quick-Start.md  README.md  WOE-Methodology.md  _Sidebar.md
examples/: README.md  advanced_usage.py  basic_pipeline.py  basic_usage.py  complete_pipeline_test.py  dual_unified_pipeline_demo.py  flexible_usage.py  quickstart_demo.py
examples/data/credit_risk_sample/: calibration_longrun.csv  calibration_recent.csv  scoring_future.csv
examples/data/quickstart/: data_dictionary.csv  loan_applications.csv
excel_test/: report.xlsx  woe_mapping_20250908_105210.json
notebooks/: 00_master_end_to_end.ipynb  01_dual_pipeline_example.ipynb  01_simulation_quick_start.ipynb  02_simulation_only_training.ipynb  03_simulation_with_calibration.ipynb  04_simulation_only_scoring.ipynb  05_simulation_with_data_dict.ipynb  06_realistic_gini_test.ipynb  07_dual_pipeline_test.ipynb  COMPLETE_PIPELINE_DEMO.ipynb  Dual_Unified_Pipeline_Demo.ipynb  GettingStarted.ipynb  README.md  Risk_Model_Pipeline_End_to_End.ipynb  Unified_Pipeline_Synthetic_Demo.ipynb  WOE_Optimizer_End_to_End.ipynb  complete_pipeline_test.ipynb  complete_risk_pipeline.ipynb  complete_workflow_example.ipynb  comprehensive_pipeline_test.ipynb  comprehensive_pipeline_test_backup.ipynb  data_dictionary_example.ipynb  end_to_end_pipeline.ipynb  quick_test.ipynb  risk_model_demo.ipynb  risk_pipeline_quickstart.ipynb  risk_pipeline_quickstart_converted.py  risk_pipeline_quickstart_rerun.ipynb  test.ipynb  unified_pipeline_example.ipynb  unified_pipeline_test.ipynb  usage_example.ipynb
notebooks/_exec/: risk_pipeline_quickstart_light.ipynb
notebooks/output_complete/: model_report.xlsx
notebooks/output_notebook/: results_summary.csv  selected_features.txt
notebooks/pipeline_test_output/: model_report.xlsx
old_process/: README.md  pipeline16_backup.py  pipeline_first_attempt.py
output/: model_report.xlsx  model_summary.csv
output_complete/: model_report.xlsx  pipeline_config.json  selected_features.txt
outputs/: model_report.xlsx
outputs_full_test/: best_model_20250903_142244_7f98e2ed.joblib  final_vars_20250903_142244_7f98e2ed.json  full_test_report.xlsx  woe_mapping_20250903_142244_7f98e2ed.json
scripts/: append_analysis_cells.py  append_quickstart_diagnostics.py  build_quickstart_notebook.py  clean_config_cell.py  clean_notebook_imports.py  executor.py  generate_credit_risk_sample.py  inspect_credit_risk_sample.py  make_calibration_data.py  make_sample_csv.py  make_scoring_data.py  monitor_cli.py  prepare_light_exec.py  rewrite_quickstart.py  run16_silent.py  run_pipeline.py  run_quick_validation.py  run_smoke_riskbands.py
src/matrixprofile/: __init__.py  exceptions.py
src/risk_pipeline/: __init__.py  _version.py  advanced_pipeline.py  api.py  cli.py  complete_pipeline.py  monitoring.py  pandas_compat.py  pipeline.py  pipeline16.py  pipeline_v2.py  unified_pipeline.py  utf8_fix.py
src/risk_pipeline/config/: schema.py
src/risk_pipeline/core/: __init__.py  base.py  boruta_selector.py  calibration.py  calibration_analyzer.py  config.py  config_old.py  data_processor.py  env_check.py  feature_engineer.py  feature_selector.py  feature_selector_enhanced.py  model_builder.py  model_builder_v2.py  model_trainer.py  optimized_binning.py  psi_calculator.py  report_generator.py  reporter.py  risk_band_optimizer.py  (+6 more)
test_new/: model_report.xlsx  woe_mapping_20250904_095001_191cd6bb.json
test_old/: final_vars_20250904_094306_d026ca7d.json  model_report.xlsx  woe_mapping_20250904_094306_d026ca7d.json  woe_mapping_20250904_094930_f6fd1362.json
test_old_pipeline/: final_vars_20250904_093341_9515c265.json  model_report.xlsx  woe_mapping_20250904_093341_9515c265.json  woe_mapping_20250904_093810_98a6b93f.json
test_output/: best_model_20250903_155300_3237447c.joblib  final_vars_20250903_155300_3237447c.json  final_vars_20250903_155517_0cd58773.json  model_report.xlsx  woe_mapping_20250903_155300_3237447c.json  woe_mapping_20250903_155517_0cd58773.json
test_run1/: final_vars_20250903_224759_43fe4e20.json  model_report.xlsx  woe_mapping_20250903_224759_43fe4e20.json
tests/: test_cli_run.py  test_config_split.py  test_data_processor_tsfresh.py  test_error_handler.py  test_extras.py  test_quickstart_demo.py  test_reporter.py  test_sample_data.py  test_smoke.py  test_stratified_split.py  test_tsfresh_rolling.py  test_validation.py
tests/integration/: add_psi_to_excel.py  conftest.py  run_fast_pipeline.py  run_minimal_pipeline.py  test_calibration_direct.py  test_calibration_fix.py  test_clean_workflow.py  test_complete_e2e.py  test_complete_workflow.py  test_end_to_end.py  test_fast_e2e.py  test_final_e2e.py  test_final_integrated.py  test_full_pipeline.py  test_integrated_workflow.py  test_quick_e2e.py  test_quick_integrated.py  test_scoring.py
utils/maintenance_scripts/: fix_all_errors_final.py  fix_critical_errors.py  fix_final_18.py  fix_indentation.py
(+41 files in other folders)
