[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-pipeline"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # TODO: Update
]
description = "Production-ready risk modeling pipeline with WOE transformation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/selimoksuz/risk-model-pipeline"
Documentation = "https://github.com/selimoksuz/risk-model-pipeline#readme"
Repository = "https://github.com/selimoksuz/risk-model-pipeline"
Issues = "https://github.com/selimoksuz/risk-model-pipeline/issues"

dependencies = [
    "pandas>=1.3.0,<2.0.0",
    "numpy>=1.20.0,<1.25.0",
    "scikit-learn>=1.0.0,<1.3.0",
    "joblib>=1.0.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "matplotlib>=3.5.0,<3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "statsmodels>=0.13.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.6.0",
    "catboost>=1.1.0",
    "pygam>=0.9.0",
    "optuna>=3.0.0",
    "shap>=0.41.0",
    "imbalanced-learn>=0.9.0",
    "scikit-learn-extra>=0.2.0",
]

[project.scripts]
risk-pipeline = "risk_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["risk_pipeline*"]

[tool.setuptools.dynamic]
version = {attr = "risk_pipeline._version.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=risk_pipeline --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
