[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-pipeline"
dynamic = ["version"]
authors = [
    { name = "Selim Oksuz", email = "selimoksuz@users.noreply.github.com" }
]
description = "Production-ready risk modeling pipeline with WOE transformation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0,<2.4.0",
    "numpy>=1.23.0,<1.27.0",
    "scipy>=1.7.0,<1.12.0",
    "scikit-learn>=1.1.0,<1.4.0",
    "joblib>=1.1.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "matplotlib>=3.6.0,<3.9.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "statsmodels>=0.13.0",
    "lightgbm>=3.3.0,<4.5.0",
    "xgboost>=1.6.0,<2.0.0",
    "catboost>=1.1.0,<2.0.0",
    "pygam>=0.9.0,<1.0.0",
    "optuna>=3.0.0,<4.0.0",
    "shap>=0.41.0,<0.44.0",
    "imbalanced-learn>=0.9.0,<0.12.0",
    "scikit-learn-extra>=0.2.0,<0.3.0",
    "xbooster>=0.0.12,<1.0.0",
    "pydantic>=1.10,<2.0",
    "nbformat>=5.8.0,<6.0.0",
    'importlib-resources>=5.0; python_version < "3.9"'
]

[project.urls]
Homepage = "https://github.com/selimoksuz/risk-model-pipeline"
Documentation = "https://github.com/selimoksuz/risk-model-pipeline#readme"
Repository = "https://github.com/selimoksuz/risk-model-pipeline"
Issues = "https://github.com/selimoksuz/risk-model-pipeline/issues"

[project.scripts]
risk-pipeline = "risk_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["risk_pipeline*"]

[tool.setuptools.dynamic]
version = {attr = "risk_pipeline._version.__version__"}
[tool.setuptools.package-data]
"risk_pipeline.data.sample" = ["credit_risk/*.csv"]


[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=risk_pipeline --cov-report=term-missing"
filterwarnings = [
    "ignore:is_sparse is deprecated:DeprecationWarning",
    "ignore:is_categorical_dtype is deprecated:DeprecationWarning",
    "ignore:Downcasting object dtype arrays on .fillna:FutureWarning",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
